Update GIF link to use raw GitHub URL

--- a/index.html
+++ b/index.html
@@ -411,7 +411,7 @@
                 name: "CI/CD Pipeline with Jenkins, Kubernetes, and Ansible",
                 description: "Robust CI/CD pipeline implementation automating build, test, and deployment processes for containerized applications. Demonstrates end-to-end software delivery using Jenkins, Kubernetes, and Ansible for reliable and efficient deployment workflows.",
                 github: "https://github.com/Ab-Cloud-dev/CI-CD-Pipeline-with-Jenkins-Kubernetes-and-Ansible",
-                gif: "https://github.com/Ab-Cloud-dev/CI-CD-Pipeline-with-Jenkins-Kubernetes-and-Ansible/blob/main/images/Recording%202025-09-18%20195708.gif"
+                gif: "https://github.com/Ab-Cloud-dev/CI-CD-Pipeline-with-Jenkins-Kubernetes-and-Ansible/blob/main/images/Recording%202025-09-18%20195708.gif?raw=true"
             },
             {
                 name: "100-Days-Of-DevOps-KodeKloud-Solutions-Explanation",
